degree 论文抓取存在问题

--- a/config.ini
+++ b/config.ini
@@ -1,14 +1,13 @@
 [mongodb]
-MONGO_USER='root'
-MONGO_PASSWD='abcd1234'
-MONGO_HOST="192.168.0.120"
-MONGO_PORT="27017"
-MONGO_DB='school_data'
-DEGREE_UNIT='test_degree'
-DEGREE_ARTICLES='test_degree_articles'
-
+MONGO_USER=root
+MONGO_PASSWD=abcd1234
+MONGO_HOST=192.168.0.120
+MONGO_PORT=27017
+MONGO_DB=school_data
+DEGREE_UNIT=test_degree
+DEGREE_ARTICLES=test_degree_articles
 [proxy]
-proxyHost="ip4.hahado.cn"
-proxyPort="47333"
-proxyUser="196820"
-proxyPass="196820"
+proxyHost=ip4.hahado.cn
+proxyPort=47333
+proxyUser=196820
+proxyPass=196820
