--- a/config.ini
+++ b/config.ini
@@ -11,3 +11,5 @@ proxyHost=ip4.hahado.cn
 proxyPort=47333
 proxyUser=196820
 proxyPass=196820
+proxyLoginUser=17721288518
+proxyLoginPass=17721288518
